--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -1,12 +1,12 @@
 # ES6 概要
 
-ES6在语法层面带来了很大的非破坏性更新，我们将在本章中讨论其中的大多数内容。这些改变大多为语法糖，这意味着，这些新语法其实用ES5，也是可以写出来了，只是可能会更复杂一些。新增的变量声明方式 `let` 和 `const` 则不仅仅是语法糖，我们会在本章最后讨论一下这个。
+ES6对一些已有的功能进行了非破坏性更新，其中的大部分我们可以理解为语法糖，称之为语法糖，意味着，这些新语法能做的事情其实用ES5也可以做，只是会稍微复杂一些。本章我们将着重讨论这些语法糖，看完之后，你一定会对ES6的一些新功能有新理解。考虑到 `let` 和 `const` 从某种层面上可以看做是`var`的拓展，虽然它们不是语法糖，我们也会在在本章中进行讨论。
 
-ES6中的对象字面量有一些小的语法更新，我们从此处开始讨论。
+我在平时使用React的过程中，已经享受到了简写的对象字面量带来的好处，本文也从此开始叙述。
 
 ## 对象字面量
 
-对象字面量是指以`{}`形式什么的对象，比如下面这样：
+**对象字面量**是指以`{}`形式直接表示的对象，比如下面这样：
 
 ```js
 var book = {
@@ -16,11 +16,11 @@ var book = {
 }
 ```
 
-ES6 对对象字面量语法带来了一些改进：包括，属性/方法的简洁表示，可计算的属性名等等，我们逐一来看：
+ES6 对对象字面量的语法带来了一些改进：包括属性/方法的简洁表示，可计算的属性名等等，我们逐一来看：
 
 ### 属性的简洁表示法
 
-有时候，我们声明的属性名中有几个他们的值所对应的变量和属性名是一致的。比如说我们有个名为`listeners` 的数组，当我们想把它赋值给对象中属性名为 `listeners` 的对象字面量时，我们需要重复写这个名字。如下所示
+你有没有遇到过这种场景，我们声明了一个对象，对象中的若干属性，其值由变量表示，且该变量的名称和属性名是一样的。比如说如下，我们有个名为 `listeners` 的数组，我们想把它赋值给`events`对象中的`listeners`属性，一般说来，用ES5我们会用下面这种写法：
 
 ```js
 var listeners = []
@@ -31,7 +31,7 @@ var events = {
 }
 ```
 
-如果你也用到过这种情况，你就利用ES6语法的新特性简写成下面这种形式了：
+ES6则运行我们简写成下面这种形式：
 
 ```js
 var listeners = []
@@ -39,27 +39,13 @@ function listen() {}
 var events = { listeners, listen }
 ```
 
-之后我们还会讨论到，合理去重能帮助在不影响语义的情况下减少重复代码。在下面的代码片段中，我重写了浏览器的永久存储`api`，`localStroge`,作为常驻内存的`ployfill`,如果不用简写，它将显得很冗长：
+怎么样，是不是感觉简洁了许多，ES6让我们在不影响语义的情况下减少了重复代码。
 
-```js
-var store = {}
-var storage = { getItem,  setItem, clear }
-function getItem(key) {
-  return key in store ? store[key] : null
-}
-function setItem(key, value) {
-  store[key] = value
-}
-function clear() {
-  store = {}
-}
-```
-
-这是众多ES6中的意在减少你的代码复杂度的语法之一，一旦你习惯使用这种语法，你会发现无论是代码的可读性还是你自己的开发效率都会得以提升。
+ES6提供了众多让你的代码更简洁，语义更清晰的语法，这只是其中之一，当你习惯了使用这些语法，你的代码的可读性，可维护性，你的开发效率都会大大提升。
 
 ### 可计算的属性名
 
-有时候你声明的对象中会包含一些属性名是依据JS的变量或者其它一些表达式生成，如下用ES5所写的代码所示。在这个例子中，你可以把`expertise`假设为一个你事先并不知道的函数参数：
+对象字面量的另一个重要更新是允许你使用可计算的属性名，在ES5中我们也可以给对象添加属性名为变量的属性，以下述代码为例，需要这样做，声明一个名为`expertise`的变量，然后通过`person[expertise]`这种形式把变量添加为对象`person`的属性：
 
 ```js
 var expertise = 'journalism'
@@ -73,7 +59,7 @@ person[expertise] = {
 }
 ```
 
-ES6 中的对象字面量并不限制你只能使用静态属性名，通过可计算属性名，你可以把任何表达式放在中括号中，把它们的值当做属性名，下面的代码表示了上述ES5代码的ES6写法，看看是不是简介了许多：
+ES6 中，对象字面量可以使用计算属性名了，把任何表达式放在中括号中，表达式的值就是对应的属性名，针对上面的代码，用ES6可以这样写：
 
 ```js
 var expertise = 'journalism'
@@ -87,7 +73,7 @@ var person = {
 }
 ```
 
-不过属性你不能同时使用简写属性和属性名计算，简写属性是一种在编译阶段的用以减少重复的语法糖，而计算属性名会在运行时生效。考虑到这两种不相容的特性，以下代码会报错。在大多数情况下，二者结合使用会导致代码难易阅读，所以二者不能一起使用也许也是一个好事。
+不过需要注意的是，**简写属性和计算的属性名不可同时使用**。这是因为，简写属性是一种在编译阶段的就会生效的语法糖，而计算的属性名则需要在运行时生效。如果你把二者混用，代码会报错。而且二者混用往往还会降低代码的可读性，所以在语言层面上限制二者不能混用也是个好事。
 
 ```js
 var expertise = 'journalism'
@@ -102,7 +88,8 @@ var person = {
 }
 ```
 
-计算属性名的一个常用场景发生在当我们想把一个对象的某个属性添加为另外一个对象的属性，如下所示，除了使用第三方声明，我们可以采用如下简写形式：
+遇到以下情景时，可计算的属性名会让我们的代码更简洁：
+1. 某个新对象的属性引自另一个对象，如下所示：
 
 ```js
 var grocery = {
@@ -117,7 +104,7 @@ var groceries = {
 }
 ```
 
-另一个例子是我们接受函数的参数用以构建对象。在ES5代码中，我们需要声明一个对象字面量并分配一个属性，然后动态的添加属性，然后反对这个对象。下述代码表明了这个过程，我们创建一个包裹函数可以在之后用以响应Ajax请求，当出错时返回的对象将拥有一个`error`属性及对应的描述，当执行正确时，将由一个`success`属性及对应的描述。
+2. 所构建的对象的属性名来自函数参数。如果使用ES5来处理这种问题，我们需要先声明一个对象字面量，再动态的添加属性，再返回这个对象。下面的例子中，我们创建了一个响应Ajax请求的函数，这个函数的作用在于，请求失败时，返回的对象拥有一个名为`error`属性及对应的描述，请求成功时，该对象拥有一个名为`success`属性及对应的描述。
 
 ```js
 function getEnvelope(type, description) {
@@ -129,7 +116,7 @@ function getEnvelope(type, description) {
 }
 ```
 
-利用计算属性，我们可以更加简明的实现一样的效果：
+使用ES6提供的利用计算属性名，更简洁的实现如下：
 
 ```js
 // es6
@@ -141,11 +128,11 @@ function getEnvelope(type, description) {
 }
 ```
 
-关于对象字面量的最后一个改进是关于函数的
+ES6中的对象属性可以简写，方法其实也是可以的。
 
 ### 方法定义
 
-一般说来，你可以像添加属性一样添加函数。在下面的代码示例中，我们会创建一个小的事件发生器，它拥有一个`emitter#on`方法可以用以注册事件，还有一个`emitter#emit`方法可用以执行事件
+以下面代码为例，我们看看传统上如何定义方法，这里我们构建了一个事件发生器，其中的`on`方法用以注册事件，`emit`方法用以执行事件：
 
 ```js
 var emitter = {
@@ -167,8 +154,7 @@ var emitter = {
 }
 ```
 
-
-在ES6中你可以使用新的语法来定义对象中的函数了，我们可以省略`function`关键字和毛航了。如下所示，用ES6 的新语法，我们的方法声明更加简洁了
+ES6 运行我们省略对象方法的`function`关键字及之后的冒号，改写后的代码如下：
 
 ```js
 var emitter = {
@@ -190,11 +176,13 @@ var emitter = {
 }
 ```
 
-箭头函数是ES6中声明函数的另外一种语法，它还有一些特别的优点，我们一起来看看箭头函数是什么，它该如何声明，看看在语义上它又有何不同。
+怎么样，有没有感觉使用ES6语法，代码稍微简洁了一些。
+
+ES6中的箭头函数可谓大名鼎鼎了，它有一些特别的优点(关于`this`)，也许你已经很熟悉它了，我也一直在用它，不过有些细节之前却一直不了解，比如箭头函数的几种简写形式及使用注意事项。
 
 ## 箭头函数
 
-传统上，在JS中，函数的声明包括函数名，一系列参数和函数体，如下所示：
+传统上，JS中声明的函数，需要有函数名，一系列参数和函数体，如下：
 
 ```js
 function name(parameters) {
@@ -202,7 +190,7 @@ function name(parameters) {
 }
 ```
 
-同样，也支持声明匿名函数，即不给函数命名而是把函数赋值给一个变量，属性或者直接调用函数：
+如果定义的是匿名函数则没有函数名，匿名函数通常会被赋值给一个变量，属性，有时候会被直接调用：
 
 ```js
 var example = function (parameters) {
@@ -210,7 +198,7 @@ var example = function (parameters) {
 }
 ```
 
-从ES6 开始，你可以使用箭头函数来写匿名函数了。不过要记住，这和传统的匿名函数有一些不同的地方，下例中的匿名函数看起来其实和上面我们用ES5语法写的匿名函数很想，唯一的不同在于确实`function`关键字，参数和函数体之间以`=>`相连接。
+ES6 为我们提供了一种写匿名函数的新方法，即使用箭头函数。箭头函数不需要使用`function`关键字，其参数和函数体之间以`=>`相连接：
 
 ```js
 var example = (parameters) => {
@@ -218,13 +206,18 @@ var example = (parameters) => {
 }
 ```
 
-尽管箭头函数看起来很像典型的匿名函数，但是他们却具有根本性的不同：箭头函数不能被直接命名，尽管允许把它们赋值给一个变量，它们不能被用做构造函数，它们也没有`prototype`属性，这意味着你不能对箭头函数使用`new`关键字，并且他们还绑定了词法作用域，这意味着他们不会修改`this`的指向。
+尽管箭头函数看起来类似于传统的匿名函数，他们却具有根本性的不同：
 
-接下来我们深入解释一下和传统函数相比二者的语义上的区别。
+- 箭头函数不能被直接命名，不过允许它们赋值给一个变量；
+- 箭头函数不能用做构造函数，你不能对箭头函数使用`new`关键字；
+- 箭头函数也没有`prototype`属性；
+- 箭头函数绑定了词法作用域，不会修改`this`的指向。
+
+最后一点是箭头函数最大的特点，我们仔细看看这一点。
 
 ### 词法作用域
 
-在箭头函数的函数体内，`this`,`arguments`,`super`都指向包含箭头函数的作用域，箭头函数本身不产生新的作用域。以如下代码为例，这里有一个名为`timer`的对象，属性`seconds`用以计数，`start`方法用以开始计时，当我们在若干秒后调用`start`方法时，将打印出当前的`seconds`值。
+我们在箭头函数的函数体内使用的`this`,`arguments`,`super`等都指向包含箭头函数的作用域，箭头函数本身不产生新的作用域。下述代码中，我们创建了一个名为`timer`的对象，它的属性`seconds`用以计时，方法`start`用以开始计时，若我们在若干秒后调用`start`方法，将打印出当前的`seconds`值。
 
 ```js
 var timer = {
@@ -235,19 +228,20 @@ var timer = {
     }, 1000)
   }
 }
+
 timer.start()
 setTimeout(function () {
   console.log(timer.seconds)
 }, 3500)
 // <- 3
+
 ```
 
-如果这里我们没用箭头函数而用的是常规的匿名函数，`this`将指向匿名函数本身，在`start`方法开头处，我们也需要使用`var self = this`这样的语法，然后在之后的匿名函数中使用`self`代替`this`，使用箭头函数，我们无需再做这些多余的操作来标注上下文一致，而可以专注于函数本身的代码了。
+如果这里的`start`方法中，我们没用箭头函数而用的是常规的匿名函数，`this`将指向`window`了，想要让代码正常工作，我们需要在`start`方法开头处插入`var self = this`，然后替换匿名函数函数体中的`this`为`self`。
 
-类似的，ES6中的箭头函数的作用域绑定意味着函数调用不能通过`.call`,`.apply`,`.bind`等改变函数的作用域。这种限制利大于害，它保证了上下文永远保持不变。
+还需要说明的是，箭头函数的作用域也不能通过`.call`,`.apply`,`.bind`等语法来改变，这使得箭头函数的上下文将永久不变。
 
-我们再来看看下面这个例子，你猜猜，最终打印出的结果是什么：
-
+我们再来看另外一个箭头函数与普通匿名函数的不同之处，你猜猜，下面的代码最终打印出的结果会是什么：
 
 ```js
 function puzzle() {
@@ -258,15 +252,26 @@ function puzzle() {
 puzzle('a', 'b', 'c')(1, 2, 3)
 ```
 
-答案是，对常规匿名函数而言，`arguments`指向匿名函数本身，所以此处打印的结果会是1,2,3
+答案是`1,2,3`，原因是对常规匿名函数而言，`arguments`指向匿名函数本身。
 
-作为对比，我们看看下面这个例子，在本例中，箭头函数的作用域指向`puzzle`函数，这次的打印结果会是`a,b,c`,箭头函数的中调用`arguments`其实是`puzzle`函数的`arguments`
+作为对比，我们看看下面这个例子，再猜猜，打印结果会是什么？
 
-前面我们提到过，箭头函数有几种表达形式，但是现在我们看到的例子中，都是完整的箭头函数形式，下面我们看看，箭头函数的其它写法。
+```js
+function puzzle() {
+  return ()=>{
+    console.log(arguments)
+  }
+}
+puzzle('a', 'b', 'c')(1, 2, 3)
+```
 
-### 箭头函数的不同写法
+答案是`a,b,c`,箭头函数的特殊性决定其本身没有`arguments`对象，这里的`arguments`其实是其父函数`puzzle`的。
 
-一直以来我们的箭头函数是这样写的：
+前面我们提到过，箭头函数还可以简写，接下来我们一起看看。
+
+### 简写的箭头函数
+
+完整的箭头函数是这样的：
 
 ```js
 var example = (parameters) => {
@@ -274,7 +279,9 @@ var example = (parameters) => {
 }
 ```
 
-变种之一是，当只有一个参数时，我们可以省略箭头函数参数中的括号，这样减少了括号的数量，当箭头函数是另外一个函数的方法时，这样对一些人来说是更容易阅读的。
+**简写1：**
+
+当只有一个参数时，我们可以省略箭头函数参数两侧的括号：
 
 ```js
 var double = value => {
@@ -282,27 +289,65 @@ var double = value => {
 }
 ```
 
-实践说明，对简单函数来说，箭头函数是常用的（类似上述`double`函数所示），接下来的形式更加简洁，这次我们去除了表征函数体的`{}`，直接写上`value * 2`这样的语句，当这个函数被调用时，这个语句将被调用，并把结果当做返回值返回。`return` 是静默发生的，这里不再需要花括号，不过只能使用单一表达式。
+**简写2：**
+
+对只有单行表达式且，该表达式的值为返回值的箭头函数来说，表征函数体的`{}`，可以省略，`return` 关键字可以省略，会静默返回该单一表达式的值。
 
 ```js
 var double = (value) => value * 2
 ```
 
-这里也可以结合上面说的两种简写，而得到更加简洁的形式
+**简写3：**
+上述两种形式可以合并使用，而得到更加简洁的形式
 
 ```js
 var double = value => value * 2
 ```
 
-现在，你对箭头函数有了一定的理解，下面我们结合它的优点，并说明它们在何时会非常有用。
+现在，你肯定学会了箭头函数的基本使用方法，接下来我们再看几个使用示例。
 
-### 箭头函数的优点和使用示例
 
-不过事先得声明一点，我们并不应该盲目的在一切地方采用`ES6`,是否使用新语法的原则是看采用了新语法能否在实质上改善代码的可读性和可维护性。ES6并没有在任何地方比我们一直写的ES5好，过渡对待ES6 并不好。
+### 简写箭头函数带来的一些问题
 
-在一些情况下，箭头函数可能并非最好的工具，比如说，你有一个包含若干行代码的复杂函数，使用`=>`代替`function`关键字可能很难改善你的代码。箭头函数用在简单的代码时是有效的，`function`关键字及相应的语法标准是组成函数表达式的重要部分。
+当你的简写箭头函数返回值为一个对象时，你需要用小括号括起你想返回的对象。否则，浏览器会把对象的`{}`解析为箭头函数函数体的开始和结束标记。
 
-合理的命名和添加作用域能让函数更利于阅读和看明白，箭头函数并不能直接命名，但是却可以通过复制给变量的形式实现间接命名，比如如下代码中，我们把箭头函数赋值给变量 `throwError`，当函数被调用时，值是一段错误，通过追溯我们可以找到报错的箭头函数是`throwError`.
+```js
+// 正确的使用形式
+var objectFactory = () => ({ modular: 'es6' })
+```
+
+下面的代码会报错，箭头函数会把本想返回的对象的花括号解析为函数体，`number`被解析为`label`,`value`解释为没有做任何事情表达式，我们又没有显式使用`return`,返回值默认是`undefined`。
+
+```js
+[1, 2, 3].map(value => { number: value })
+// <- [undefined, undefined, undefined]
+```
+
+当我们返回的对象字面量不止一个属性时，浏览器编译器不能正确解析第二个属性，这时会抛出语法错误。
+
+```js
+[1, 2, 3].map(value => { number: value, verified: true })
+// <- SyntaxError
+```
+
+解决方案是把返回的对象字面量包裹在小括号中，以助于浏览器正确解析：
+
+```js
+[1, 2, 3].map(value => ({ number: value, verified: true }))
+/* <- [
+  { number: 1, verified: true },
+  { number: 2, verified: true },
+  { number: 3, verified: true }]
+*/
+```
+
+### 该何时使用箭头函数
+
+其实我们并不应该盲目的在一切地方使用ES6,ES6也不是一定比ES5要好，是否使用主要看其能否改善代码的可读性和可维护性。
+
+箭头函数也并非适用于所有的情况，比如说，对于一个行数很多的复杂函数，使用`=>`代替`function`关键字带来的简洁性并不明显。不过不得不说，对于简单函数，箭头函数确实能让我们的代码更简洁。
+
+给函数以合理的命名，有助于增强程序的可读性。箭头函数并不能直接命名，但是却可以通过赋值给变量的形式实现间接命名，如下代码中，我们把箭头函数赋值给变量 `throwError`，当函数被调用时，会抛出错误，我们可以追溯到是箭头函数`throwError`报的错。
 
 ```js
 var throwError = message => {
@@ -313,8 +358,7 @@ throwError('this is a warning')
   at throwError
 ```
 
-
-当所定义的函数需要采用和外部一样的作用域时，箭头函数是简洁且有效的，这类的定义使得你的函数在一些情况下很简洁，这在某些函数式编程的情况下非常有效，比如我们使用`.map`,`.filter`,`.reduce`时。如下所示
+如果你想完全控制你的函数中的`this`，使用箭头函数是简洁高效的，采用函数式编程尤其如此。
 
 ```js
 [1, 2, 3, 4]
@@ -326,47 +370,14 @@ throwError('this is a warning')
 // <- 8
 ```
 
-### 箭头函数省写形式返回对象字面量的一些问题
 
-当你想以简洁的形式返回一个对象时，你需要用小括号括起来你想返回的对象。否则，浏览器会把对象的`{}`解析为箭头函数的开始和结束，把里面的内容解析为函数体。
+## 解构赋值
 
-```js
-// 正确的使用形式
-var objectFactory = () => ({ modular: 'es6' })
-```
-
-在下面这个错误示例中，箭头函数把花括号解析为函数体，`number`被解析为`label`,`value`表达式并没有做任何事情，由于我们现在有了函数体，有没有做任何返回值，下述代码的结果就会是`undefined`了。
-
-```js
-[1, 2, 3].map(value => { number: value })
-// <- [undefined, undefined, undefined]
-```
-
-当我们返回的对象字面量不止一个值的时候，浏览器编译器不能正确解析第二个参数，因此会抛出语法错误。
-
-```js
-[1, 2, 3].map(value => { number: value, verified: true })
-// <- SyntaxError
-```
-
-把返回的对象字面量包裹在小括号中能解决这个问题，这样浏览器就可以正确的解析了：
-
-```js
-[1, 2, 3].map(value => ({ number: value, verified: true }))
-/* <- [
-  { number: 1, verified: true },
-  { number: 2, verified: true },
-  { number: 3, verified: true }]
-*/
-```
-
-## 分配解构
-
-解构是ES6提供的最灵活和富于表现的特性了。也是最简单的特性之一，它可以按你所需绑定多个变量，并可应用于对象，数组甚至函数参数。我们一个个的来看，先从对象说起吧。
+ES6提供的最灵活和富于表现性的新特性莫过于解构了。一旦你熟悉了，它用起来也很简单，某种程度上解构可以看做是变量赋值的语法糖，可应用于对象，数组甚至函数的参数。
 
 ### 对象解构
 
-设想你有一个程序，这个程序中包含一些漫画人物，Bruce Wayne 就是其中之一，现在你想引用描述它的对象中的一个属性，可能你会按下面说的这样做。
+为了更好的描述对象解构如何使用，我们先构建下面这样一个对象（漫威迷一定知道这个对象描述的是谁）：
 
 ```js
 // 描述Bruce Wayne的对象
@@ -381,31 +392,31 @@ var character = {
 }
 ```
 
-如果你想把一个名为`pseudonym` 的对象指向`character.pseudonym`,你可以写下面这样的ES5代码，这在你想在程序中多次引用这个属性而又不想多敲字符时是很常见的。
+假如现有有一个名为 `pseudonym` 的变量，我们想让其变量值指向`character.pseudonym`,使用ES5，你往往会按下面这样做：
 
 ```js
 var pseudonym = character.pseudonym
 ```
 
-通过结构赋值，语法能看起来更清晰。如下所示，你不再需要写两次`pseudonym`了
+ES6致力于让我们的代码更简洁，通过ES6我们可以用下面的代码实现一样的功能：
 
 ```js
 var { pseudonym } = character
 ```
 
-如同你可以使用`var`加逗号在同时声明多个变量一样，你同样可以在花括号内通过解构声明多个变量。
+如同你可以使用`var`加逗号在一行中同时声明多个变量，解构的花括号内使用逗号可以做一样的事情。
 
 ```js
 var { pseudonym, name } = character
 ```
 
-类似的，你可以混合使用解构和常规的自定义变量，尽管这样写初看起来让人觉得疑惑，但是是否使用还是取决于你所遵循的代码风格中对变量定义的描述。不过，无论怎么说来，解构语法确实表现出了其灵活性。
+我们还可以混用解构和常规的自定义变量，这也是解构语法灵活性的表现之一。
 
 ```js
 var { pseudonym } = character, two = 2
 ```
 
-比如说你现在有这样的需求，你想提取出`pseudonym`属性，但是想要把它赋值给变量 `alias`,你可以按照如下方法使用解构，赋予该值以别名（`aliasing`），这里我们取的别名为`alias`,当然你可以取任何你想取的名字。
+解构还允许我们使用别名，比如我们想把`character.pseudonym`赋值给变量 `alias`,可以按下面的语句这样做，只需要在`pseudonym`后面加上`:`即可：
 
 ```js
 var { pseudonym: alias } = character
@@ -413,19 +424,17 @@ console.log(alias)
 // <- 'Batman'
 ```
 
-上述代码初看起来可能也没有用ES5语法时那么简洁，但是如果当你把解构用于多层结构时就能体会到它带来的好处了，看下面这个例子。
+解构还有另外一个强大的功能，解构值还可以是对象：
 
 ```js
 var { metadata: { gender } } = character
 ```
 
-当然，多层解构也是可以赋予别名的，这样可以方便的更改子层属性的名称：
+当然，对于多层解构，我们同样可以赋予别名，这样我们可以通过非常简洁的方法修改子属性的名称：
 
 ```js
 var { metadata: { gender: characterGender } } = character
 ```
-
-上面描述的场景是很常见的，因为属性值常常位于宿主对象中，尽管`palette.color.code`也具有较好的描述性，`code`这个词可以指代的意义有点太广了，使用别名`colorCode`可以帮助你结合上下文有一个语义更好的值。
 
 在ES5 中，当你调用一个未曾声明的值时，你会得到`undefined`:
 
@@ -436,7 +445,7 @@ console.log(character['boots'])
 // <- undefined
 ```
 
-使用解构，情况也是类似的，当你声明了一个不存在属性的解构变量，你也会得到`undefined`.
+使用解构，情况也是类似的，如果你在左边声明了一个右边对象中不存在的属性，你也会得到`undefined`.
 
 ```js
 var { boots } = character
@@ -444,7 +453,7 @@ console.log(boots)
 // <- undefined
 ```
 
-深层的结构不存在的值（`null`或`undefined`）时，程序会抛出异常，这一点和你试图调用`null`或`undefined`的属性值时表现是一样的。
+对于多层解构，如下述代码中，`boots`并不存在于`character`中，这时程序会抛出异常，这就好比你你调用`undefined`或者`null`的属性时会出现异常。
 
 ```js
 var { boots: { size } } = character
@@ -453,7 +462,7 @@ var { missing } = null
 // <- Exception
 ```
 
-解构其实就是语法糖，如果转换为下面这样的语法，你肯定就能很清楚的明白为什么会抛出异常了。
+解构其实就是一种语法糖，看以下代码，你肯定就能很快理解为什么会抛出异常了。
 
 ```js
 var nothing = null
@@ -461,7 +470,7 @@ var missing = nothing.missing
 // <- Exception
 ```
 
-回到解构，当属性值为`undefined`时，你可以给属性值添加默认值，属性值可以是数值，字符串，函数，对象，甚至指向其它变量：
+解构也可以添加默认值，如果右侧不存在对应的值，默认值就会生效，添加的默认值可以是数值，字符串，函数，对象，也可以是某一个已经存在的变量：
 
 ```js
 var { boots = { size: 10 } } = character
@@ -469,7 +478,7 @@ console.log(boots)
 // <- { size: 10 }
 ```
 
-对于嵌套解构，同样可以赋予默认值
+对于多层的解构，同样可以使用默认值
 
 ```js
 var { metadata: { enemy = 'Satan' } } = character
@@ -477,13 +486,13 @@ console.log(enemy)
 // <- 'Satan'
 ```
 
-默认值和别名也可以一起使用，需要注意的是你需要把别名放在前面，默认值放在后面：
+默认值和别名也可以一起使用，不过需要注意的是别名要放在前面，默认值添加给别名：
 
 ```js
 var { boots: footwear = { size: 10 } } = character
 ```
 
-解构语法同样支持计算属性名，不过要这样使用，你需要用别名，这是因为计算属性名允许任何类似的表达式，这样会导致编译器无法识别变量名，看下面这个示例：
+对象解构同样支持计算属性名，但是这时候你必须要添加别名，这是因为计算属性名允许任何类似的表达式，不添加别名，浏览器解析时会有问题，使用如下：
 
 ```js
 var { ['boo' + 'ts']: characterBoots } = character
@@ -491,13 +500,13 @@ console.log(characterBoots)
 // <- true
 ```
 
-解构有时候作用也没那么大，连续语句`characterBoots = character[type]`通常看起来比`{ [type]: characterBoots } = character`更简单，这意味着在当你想要以对象字面量的形式声明属性时，对象解构才是有优势的。
+还是那句话，我们也不是任何情况下都应该使用解构，语句`characterBoots = character[type]`看起来比`{ [type]: characterBoots } = character`语义更清晰，但是当你需要提取对象中的子对象时，解构就很简洁方便了。
 
-这就是在对象中使用解构的方法了，下面看看在数组中该如何使用。
+我们再看看在数组中该如何使用解构。
 
 ### 数组解构
 
-数组解构的语法和对象解构是类似的。下例中`coordinates`对象被解构为两个变量 `x,y`.值得注意的是，这里我们用的是中括号而非花括号，这表明这里是数组解构而非对象解构。通过数组解构你不需要使用`x = coordinates[0]`这样的语法了，通过解构不使用索引值，你也可以清楚的表达明白你的意思。
+数组解构的语法和对象解构是类似的。区别在于，数组解构我们使用中括号而非花括号，下面的代码中，通过结构，我们在数组`coordinates`中提出了变量 `x,y` 。 你不需要使用`x = coordinates[0]`这样的语法了，数组解构不使用索引值，但却让你的代码更加清晰。
 
 ```js
 var coordinates = [12, -7]
@@ -506,7 +515,7 @@ console.log(x)
 // <- 12
 ```
 
-数组解构也允许你跳过你不想用到的值：
+数组解构也允许你跳过你不想用到的值，在对应地方留白即可：
 
 ```js
 var names = ['James', 'L.', 'Howlett']
@@ -515,7 +524,7 @@ console.log(lastName)
 // <- 'Howlett'
 ```
 
-和对象解构一样，数组解构也允许你使用默认值：
+和对象解构一样，数组解构也允许你添加默认值：
 
 ```js
 var names = ['James', 'L.']
@@ -524,7 +533,7 @@ console.log(lastName)
 // <- 'Doe'
 ```
 
-在ES5中，你想交换两个变量的值通常要用到第三个变量，如下所示：
+在ES5中，你需要借助第三个变量，才能完成两个变量值的交换，如下：
 
 ```js
 var left = 5
@@ -534,7 +543,7 @@ left = right
 right = aux
 ```
 
-使用解构，可以避免使用第三个变量`aux`,而是你专注于你的意图，
+使用解构，一切就简单多了：
 
 ```js
 var left = 5
@@ -542,11 +551,11 @@ var right = 7
 [left, right] = [right, left]
 ```
 
-关于解构，我们想要聊的最后一方面是关于函数的
+我们再看看函数解构。
 
 ### 函数默认参数
 
-ES6中的函数也享受到了分配默认值带来的好处，下例中我们就给参数 `exponent`分配了一个默认值：
+在ES6中，我们可以给函数的参数添加默认值了，下例中我们就给参数 `exponent` 分配了一个默认值：
 
 ```js
 function powerOf(base, exponent = 2) {
@@ -554,13 +563,13 @@ function powerOf(base, exponent = 2) {
 }
 ```
 
-箭头函数同样支持使用默认值，需要注意的是，就算只有一个参数，如果要赋予默认值，我们还是需要用小括号括起参数部分。
+箭头函数同样支持使用默认值，需要注意的是，就算只有一个参数，如果要给参数添加默认值，参数部分一定要用小括号括起来。
 
 ```js
 var double = (input = 0) => input * 2
 ```
 
-就像和一些其它语言一样，默认值不仅仅限于最右面的参数。你可以给任何位置的任何参数提供默认值。
+我们可以给任何位置的任何参数添加默认值。
 
 ```js
 function sumOf(a = 1, b = 2, c = 3) {
@@ -570,7 +579,7 @@ console.log(sumOf(undefined, undefined, 4))
 // <- 1 + 2 + 4 = 7
 ```
 
-在JS中，给一个函数提供一个包含若干属性的对象字面量做为参数并不常见，不过你可以按下面这样的方式使用：
+在JS中，给一个函数提供一个包含若干属性的对象字面量做为参数的情况并不常见，不过你依旧可以按下面方法这样做：
 
 ```js
 var defaultOptions = { brand: 'Volkswagen', make: 1999 }
@@ -583,7 +592,7 @@ carFactory()
 // <- 1999
 ```
 
-不过这样也要一定的问题，就是如果你调用函数时传入的参数只包含一个属性，另一个属性的默认值会丢失：
+不过这样做存在一定的问题，当你调用该函数时，如果传入的参数对象只包含一个属性，另一个属性的默认值会自动失效：
 
 ```js
 carFactory({ make: 2000 })
@@ -591,11 +600,11 @@ carFactory({ make: 2000 })
 // <- 2000
 ```
 
-通过混合使用解构和函数默认值，我们可以解决这个问题。
+函数参数解构就可以解决这个问题。
 
 ### 函数参数解构
 
-一个比仅提供默认值更好的办法是完全解构`options`,为每一个属性提供默认值。解构模式还允许你不使用`options`对象而单独使用每一个值，不过这样你也失去了直接使用`options`对象的能力。这在某些情况下可能也会导致问题。
+通过函数参数解构，可以解决上面的问题，这里我们为每一个属性都提供了默认值，单独改变其中一个并不会影响其它的值：
 
 ```js
 function carFactory({ brand = 'Volkswagen', make = 1999 }) {
@@ -607,7 +616,7 @@ carFactory({ make: 2000 })
 // <- 2000
 ```
 
-在这种情况下，用户如果没有提供`options`对象，我们将又丢失默认值。这意味着如果没有提供`options`,`carFactory()`函数将抛出异常。这种问题可以通过下面这种语法来修复，这种语法添加了一个空数组作为`options`的默认值，这样在调用的时候如果参数为空，就会把空对象当做默认参数了，这样也能利用每一个默认的属性值。
+不过这种情况下，函数调用时，如果参数为空即`carFactory()`函数将抛出异常。这种问题可以通过下面的方法来修复，下述代码中我们添加了一个空对象作为`options`的默认值，这样当函数被调用时，如果参数为空，会自动以`{}`作为参数。
 
 ```js
 function carFactory({
@@ -622,7 +631,7 @@ carFactory()
 // <- 1999
 ```
 
-除了默认值，你还可以在函数中使用解构来描述你的函数能够处理的对象，考虑下面的代码片段，这里我们有一个名为`car`的对象，这个对象拥有很多属性。`car`对象，描述了它的所有者，品牌，生产者，何时生产，以及所有者选择的参数。
+除此之外，使用函数参数解构，还可以让你的函数自行匹配对应的参数，看接下来的例子，你就能明白这一点了，我们定义一个名为`car`的对象，这个对象拥有很多属性：owner，brand，make，model，preferences等等。
 
 ```js
 var car = {
@@ -641,7 +650,7 @@ var car = {
 }
 ```
 
-如果我们想函数只处理这里面的部分属性，使用解构是个好办法。好处是，在读取函数的签名时，我们会意识到所需的所有属性。当我们完全使用解构时，很容易指出，何时输入会不满足函数的合同。下面的示例演示如何在参数列表中指定所需的每个属性，我们用`getCarProductModel` API来展示如何使用：
+解构能让我们的函数方便的只使用里面的部分数据，下面代码中的函数`getCarProductModel`说明了具体该如何使用：
 
 ```js
 var getCarProductModel = ({ brand, make, model }) => ({
@@ -653,13 +662,10 @@ var getCarProductModel = ({ brand, make, model }) => ({
 getCarProductModel(car)
 ```
 
-除了使用`options`对象填充，下面我们看看，解构还有什么好的用途。
-
-> 可以只利用一个对象中的部分参数，其实参数的解构通过把函数参数当做一个对象就可以比较容易的理解了。
 
 ### 解构使用示例
 
-当一个函数想要返回数组或者对象时，使用解构能让转换显得更加简洁。下例中，函数`getCoordinates()`返回了一系列的值，但是我们只取用其中的一部分值`x,y`。这样我们避免了很多中间变量的使用，同样使得代码更具可读性。
+当一个函数的返回值为对象或者数组时，使用解构，我们可以非常简洁的获取返回对象中某个属性的值（返回数组中某一项的值）。比如说，函数`getCoordinates()`返回了一系列的值，但是我们只想用其中的`x,y`，我们可以这样写，解构帮助我们避免了很多中间变量的使用，也使得我们代码的可读性更高。
 
 ```js
 function getCoordinates() {
@@ -668,7 +674,7 @@ function getCoordinates() {
 var { x, y } = getCoordinates()
 ```
 
-通过使用默认值，可以减少重复，比如你想写一个`random`函数，这个函数用以返回一个位于`min`和`max`之间的值。默认在1到10之间。这在如Python、C# 这类具有强类型特征的语言中作为命名参数的替代品特别有意思。这种模式允许为参数定义默认值并只覆盖部分值，这提供了极大的灵活性：
+通过使用默认值，可以减少重复，比如你想写一个`random`函数，这个函数将返回一个位于`min`和`max`之间的值。我们可以分辨设置`min`默认值为1，`max`默认值为10，在需要的时候还可以单独改变其中的某一个值：
 
 ```js
 function random({ min = 1, max = 10 } = {}) {
@@ -680,7 +686,7 @@ console.log(random({ max: 24 }))
 // <- 18
 ```
 
-正则表达式也非常适用于解构，解构允许你不用重新制定索引值就给一种匹配重命名。下面是一个`RegExp`的例子，这个例子允许你解析一些数据。这是一个允许你解析你的数据到它们各自组件的例子。结果数组中的第一个被保留为原生输入，这里我们可以舍弃它。（正则返回的是一个数组）
+解构还可以配合正则表达式使用。看下面这个例子：
 
 ```js
 function splitDate(date) {
@@ -690,7 +696,7 @@ function splitDate(date) {
 var [ , year, month, day] = splitDate('2015-11-06')
 ```
 
-当你的正则表达式不匹配时就需要小心了，这时候会返回`null`,为可能的失败提供测试是一种好的实践，如下代码所示：
+不过当`.exec`不比配时会返回`null`,因此我们需要修改上述代码如下：
 
 ```js
 var matches = splitDate('2015-11-06')
@@ -705,7 +711,7 @@ var [, year, month, day] = matches
 
 ## 剩余参数和拓展符
 
-ES6之前，和任意数量的函数参数进行交互是很复杂的。你需要使用`arguments`,这是一个伪数组，拥有`length`属性。通常你需要通过`Array#slice.call`转换`arguments`对象为真实的数组后再进行操作,如下所示：
+ES6之前，对于不确定数量参数的函数。你需要使用伪数组`arguments`，它拥有`length`属性，却又不具备很多一般数组有的特性。需要通过`Array#slice.call`转换`arguments`对象真数组后才能进行下一步的操作：
 
 ```js
 function join() {
@@ -716,11 +722,11 @@ join('first', 'second', 'third')
 // <- 'first, second, third'
 ```
 
-对这种情况，ES6提供了一种更好的解决方案，这就是`rest`.
+对于这种情况，ES6提供了一种更好的解决方案：`rest`。
 
 ### 剩余参数`rest`
 
-现在通过在任意JavaScript函数中的最后一个参数前添加三个点`...`，把它转换为特殊的`rest`参数。当`rest`参数是函数的唯一参数时，它就代表了传递给这个函数的所有参数。它和前面说到的`.slice`可以起到一样的作用，但是你可以避免使用类似`arguments`这样复杂的构造了，并且在参数列表中就可以直接指定了。
+使用`rest`, 你只需要在任意JavaScript函数的最后一个参数前添加三个点`...`即可。当`rest`参数是函数的唯一参数时，它就代表了传递给这个函数的所有参数。它起到和前面说的`.slice`一样的作用，把参数转换为了数组，不需要你再对`arguments`进行额外的转换了。
 
 ```js
 function join(...list) {
@@ -730,7 +736,7 @@ join('first', 'second', 'third')
 // <- 'first, second, third'
 ```
 
-`rest`参数之前的命名参数不会被包含在`rest`参数中，
+`rest`参数之前的命名参数不会被包含在`rest`中，
 
 ```js
 function join(separator, ...list) {
@@ -740,7 +746,7 @@ join('; ', 'first', 'second', 'third')
 // <- 'first; second; third'
 ```
 
-不过需要注意的是，在箭头函数中使用`rest`参数时，即使只有这一个参数，也需要使用圆括号把它围起来，不然就会报错`SyntaxError`，下面是一个结合使用二者的例子：
+在箭头函数中使用`rest`参数时，即使只有这一个参数，也需要使用圆括号把它围起来，不然就会报错`SyntaxError`，使用示例如下：
 
 ```js
 var sumAll = (...numbers) => numbers.reduce(
@@ -750,7 +756,7 @@ console.log(sumAll(1, 2, 5))
 // <- 8
 ```
 
-对比具有相同功能的ES5代码，这样更加复杂但是却更紧凑了。`sumAll`函数对不熟悉使用`.reduce`方法的读者来说可能更具有迷惑性，同样由于使用了两重的箭头函数也是的复杂性增加。这需要我们有所权衡，关于这一点，我们会在本书的第二部分讲述。
+上述代码的ES5实现如下：
 
 ```js
 // ES5的写法
@@ -766,7 +772,7 @@ console.log(sumAll(1, 2, 5))
 
 ### 拓展运算符
 
-拓展运算符可以把任意可枚举对象转换为数组，拓展可以高效对拓展目标对象如数组字面量或函数调用进行操作。下例中使用`...arguments`转换了一个函数的参数为数组字面量。
+拓展运算符可以把任意可枚举对象转换为数组，使用拓展运算符可以高效处理目标对象，在拓展目前前添加`...`就可以使用拓展运算符了。下例中`...arguments`就把函数的参数转换为了数组字面量。
 
 ```js
 function cast() {
@@ -776,14 +782,14 @@ cast('a', 'b', 'c')
 // <- ['a', 'b', 'c']
 ```
 
-使用拓展运算符，我们还可以很方便的把一段字符串转换为由每一个字母组成的数组：
+使用拓展运算符，我们也可以把字符串转换为由每一个字母组成的数组：
 
 ```js
 [...'show me']
 // <- ['s', 'h', 'o', 'w', ' ', 'm', 'e']
 ```
 
-你还可以在拓展运算符左右添加其他参数，已获得你想要的结构:
+使用拓展运算符，还可以拼合数组:
 
 ```js
 function cast() {
@@ -793,7 +799,6 @@ cast('a', 'b', 'c')
 // <- ['left', 'a', 'b', 'c', 'right']
 ```
 
-在合并多个数组时，拓展运算符也是非常有用的，下例展示了如何使用拓展拼合多个数组为一个数组字面量：
 
 ```js
 var all = [1, ...[2, 3], 4, ...[5], 6, 7]
@@ -801,13 +806,12 @@ console.log(all)
 // <- [1, 2, 3, 4, 5, 6, 7]
 ```
 
-值得注意的是，拓展运算符不仅仅可以运用于数组和`arguments`对象，它对任意可迭代的对象都可以使用。迭代也是ES6新提出的一个概念，它允许你转换任意对象为可迭代的。在[ Iteration and Flow Control]()这一章，我们将详细叙述这个概念。
+这里我还想再强调一下，拓展运算符不仅仅适用于数组和`arguments`对象，对任意可迭代的对象都可以使用。迭代也是ES6新提出的一个概念，在[ Iteration and Flow Control]()这一章，我们将详细叙述迭代。
 
 
 #### Shifting和Spreading
-> 拓展知识
 
-当你想要抽出一个数组的前一个或者两个元素时，常用的解决方案是使用`.shift`.尽管是函数式的，下述代码在第一次看到的时候却不好理解，因为我们使用了两次`.slice`从`list`中抽离出两个不同的元素。重点是，像很多ES6之前的解决方案，我们应该让语言来解决我们遇到的这些问题。
+当你想要抽出一个数组的前一个或者两个元素时，常用的解决方案是使用`.shift`.尽管是函数式的，下述代码在第一次看到的时候却不好理解，我们使用了两次`.slice`从`list`中抽离出两个不同的元素。
 
 ```js
 var list = ['a', 'b', 'c', 'd', 'e']
@@ -817,7 +821,7 @@ console.log(first)
 // <- 'a'
 ```
 
-在ES6中，你可以结合使用拓展和解构，下面的代码和上述代码具有一样的功能，不过只用一行代码就解决了上述的问题，二者这一行代码比之前使用`list.slice()`更具有可读性：
+在ES6中，结合使用拓展和解构，可以让代码的可读性更好：
 
 ```js
 var [first, second, ...other] = ['a', 'b', 'c', 'd', 'e']
@@ -825,15 +829,8 @@ console.log(other)
 // <- ['c', 'd', 'e']
 ```
 
-使用拓展运算符，你可以专注于实现你需要的功能，让语言做别的事情。在提高表述性和描述性的同时降低语言的限制在ES6中很常见。
 
-在ES6之前，当你需要一个动态的参数列表，并应用到某个函数调用时，你需要使用`.apply`。这其实是不雅的，因为这设计到改变`this`的上下文，你在这时候很容易疏忽。
-
-```js
-fn.apply(null, ['a', 'b', 'c'])
-```
-
-除了对数组进行拓展，你同样可以对函数调用进行拓展，下例展示了如何添加任意数量的参数到`multiply`函数中。
+除了对数组进行拓展，你同样可以对函数参数使用拓展，下例展示了如何添加任意数量的参数到`multiply`函数中。
 
 ```js
 function multiply(left, right) {
@@ -844,7 +841,7 @@ console.log(result)
 // <- 6
 ```
 
-想在数组中一样，对函数参数使用拓展运算符可以结合常规的参数一起使用。下例中，`print`函数结合使用了`rest`,普通参数，和拓展,这的确让我们的代码更加简洁又不至于稀释：
+向在数组中一样，函数参数中的拓展运算符同样可以结合常规参数一起使用。下例中，`print`函数结合使用了`rest`,普通参数，和拓展运算符：
 
 ```js
 function print(...list) {
@@ -854,22 +851,7 @@ print(1, ...[2, 3], 4, ...[5])
 // <- [1, 2, 3, 4, 5]
 ```
 
-使用`.apply`的另外一个限制是，当使用关键字`new`实例化一个对象时，会非常啰嗦。下面是一个结合`new`,`apply`来创建一个`Date`对象的示例，如果不考虑JS中的月份是从0开始计算的，11会被解析为十二月份，只是为了创建一个Date实例，下面这样的语句真的显得太麻烦了：
-
-```js
-new (Date.bind.apply(Date, [null, 2015, 11, 31]))
-// <- Thu Dec 31 2015
-```
-
-再看下面这段代码，拓展运算符去除了一切冗余的东西，只剩下重要的东西，只使用`new`创建新实例，使用`...`创建了一个动态的数组，然后调用Date函数，这就足够了：
-
-```js
-// 关于解构是如何绑定的this,语法糖是如何工作的，还是存在一些不太明白的地方
-new Date(...[2015, 11, 31])
-// <- Thu Dec 31 2015
-```
-
-下表总结了，我们是如何使用拓展运算符的：
+下表总结了，拓展运算符的常见使用方法：
 
 | 使用示例 | ES5 | ES6 |
 | --- | --- | --- |
@@ -887,17 +869,18 @@ new Date(...[2015, 11, 31])
 var text = `This is my first template literal`
 ```
 
-因为应用反撇号，现在你可以在字符串中随意使用单双引号了，而不用考虑转义，如下：
+因为使用的是反撇号，你可以在模板字符串中随意使用单双引号了，使用时不再需要考虑转义，如下：
 
 ```js
 var text = `I'm "amazed" at these opportunities!`
 ```
 
-模板字符串的强大功能之一是可以在其中插入JavaScript表达式
+模板字符串具有很多强大的功能，可在其中插入JavaScript表达式就是其一。
+
 
 ### 在字符串中插值
 
-通过模板字符串，你可以在模板中插入任何JavaScript表达式了。当解析到表达式时，表达式会被执行，你将获得表达式的结果，下例中，我们在字符串中插入了变量`name`：
+通过模板字符串，你可以在模板中插入任何JavaScript表达式了。当解析到表达式时，表达式会被执行，该处将渲染表达式的值，下例中，我们在字符串中插入了变量`name`：
 
 ```js
 var name = 'Shannon'
@@ -906,23 +889,23 @@ console.log(text)
 // <- 'Hello, Shannon!'
 ```
 
-不仅仅是插入变量哦，在模板字符串中你可以插入任何表达式。你可以把模板字面量中的每一个表达式都看做一个变量，然后集中于每个字符串和其它变量。不过，代码会变得更加容易维护，因为它不需要手动连接字符串和JavaScript表达式了。不过你需要保证，你的表达式中使用的变量，调用的函数在当前作用域中都是可用的。
+模板字符串是支持任何表达式的。使用模板字符串，代码将更容易维护，你无须再手动连接字符串和JavaScript表达式了。
 
-你可以依据你自己的编码风格，来确定插入多少表达式。下面的代码中，实例化了一个`Date`对象，并把它格式化为了人类可读的格式。
+看下面插入日期的例子，是不是又直观又方便：
 
 ```js
 `The time and date is ${ new Date().toLocaleString() }.`
 // <- 'the time and date is 8/26/2015, 3:15:20 PM'
 ```
 
-你也可以使用数学运算符：
+表达式中还可以包含数学运算符：
 
 ```js
 `The result of 2+3 equals ${ 2 + 3 }`
 // <- 'The result of 2+3 equals 5'
 ```
 
-你甚至可用嵌套使用模板字面量，因为它们其实也是JavaScript表达式;
+鉴于模板字符串本身也是JavaScript表达式，我们在模板字符串中还可以嵌套模板字符串;
 
 ```js
 `This template literal ${ `is ${ 'nested' }` }!`
@@ -953,7 +936,7 @@ var joined = [
 ].join('\n')
 ```
 
-应用ES6，这种处理就简单多了，模板字符串默认支持多行，比起上面那些方法简单多了：
+应用ES6，这种处理就简单多了，模板字符串默认支持多行：
 
 ```js
 var multiline =
@@ -962,7 +945,7 @@ A second line
 Then a third line`
 ```
 
-当你需要，在你需要在一块`html`中插入变量信息，或者你需要在模板中展示一个列表，你可以迭代这个列表，通过相应的markup遍历，然后通过表达式返回结果。模板字符串是非常有用的，如下所示，你可以在你的模板中声明子组件。
+当你需要返回的字符串基于`html`和数据生成，使用模板字符串是很简洁高效的，如下所示：
 
 ```js
 var book = {
@@ -987,7 +970,7 @@ var html = `<article>
 </article>`
 ```
 
-上述代码将得到下面这样的结果。值得注意的是你的空格得以保留，多个`li`也让我们的预期得以合适的渲染：
+上述代码将得到下面这样的结果。空格得以保留，多个`li`也按我们的预期被合适的渲染：
 
 ```js
 <article>
@@ -1005,7 +988,7 @@ var html = `<article>
 </article>
 ```
 
-多行模板字符串的一个副作用是它的缩进，下例展示了在函数中使用包含缩进的模板字符串，可能我们希望结果没有缩进，但是结果却有四格的缩进。
+不过有时候我们并不希望空格被保留，下例中我们在函数中使用包含缩进的模板字符串，我们希望结果没有缩进，但是实际的结果却有四格的缩进。
 
 ```js
 function getParagraph() {
@@ -1021,7 +1004,7 @@ function getParagraph() {
 }
 ```
 
-尽管不完美，我们可以用下面这个功能函数去除结果中的每一行的缩进：
+我们可以用下面这个功能函数对生成的字符串进行处理已得到我们想要的结果：
 
 ```js
 function unindent(text) {
@@ -1033,11 +1016,11 @@ function unindent(text) {
 }
 ```
 
-有时候，在插入模板之前预处理插入表达式的结果是一个好的主意。对于这些高阶应用，我们可能需要用到被称为标记模板的模板字符串新特性。
+不过，使用被称为标记模板的模板字符串新特性处理这种情况可能会更好。
 
 ### 标记模板
 
-默认情况下，JavaScript会把`\`解析为转义符号，具有这些符号的字符一般都有特殊的含义。比如说`\n`被解析为新行，`\u00f1`被解析为`ñ`等等。如果你不想被特殊解析，你也可以使用`String.raw`来标记模板。下面的代码片段只是了如何在使用`String.row`处理模板字符串，这里面的`\n`没有被解析为新行。
+默认情况下，JavaScript会把`\`解析为转义符号，对浏览器来说，以`\`开头的字符一般具有特殊的含义。比如说`\n`意味着新行，`\u00f1`表示`ñ`等等。如果你不想浏览器执行这种特殊解析，你也可以使用`String.raw`来标记模板。下面的代码就是这样做的，这里我们使用了`String.row`来处理模板字符串，相应的这里面的`\n`没有被解析为新行。
 
 ```js
 var text = String.raw`"\n" is taken literally.
@@ -1047,15 +1030,15 @@ console.log(text)
 // It'll be escaped instead of interpreted.
 ```
 
-我们添加在模板字符串之前的`String.raw`前缀就是标记模板，它被用以渲染模板，标记模板的参数可以是一组由静态部分模板构成的数组，也可以是各具结果的表达式，每个表达式有自己的参数。
+我们添加在模板字符串之前的`String.raw`前缀，这就是标记模板，这样的模板字符串在被渲染前被该标记代表的函数预处理。
 
-一个典型的标签模板字符串如下：
+一个典型的标记模板字符串如下：
 
 ```js
 tag`Hello, ${ name }. I am ${ emotion } to meet you!`
 ```
 
-时间上，上面标签模板会被转换为一下函数调用：
+实际上，上面标记模板可以用以下函数形式表示：
 
 ```js
 tag(
@@ -1065,9 +1048,7 @@ tag(
 )
 ```
 
-生成的字符串是通过获取模板的每个部分并在其旁边放置一个表达式生成的，直到模板中没有更多的部分为止。不过不实际使用，可能很难理解这些概念。下面我们实际使用看看。
-
-下述代码对`tag`进行了简单的描述，它提供了模板与字符串类似的功能，但是实际上并没有使用标记模板。它使用`reduce`把`parts`数组转换为单一值，即模板字符串的计算结果。结果通过第一个`part`初始化，然后其它的`part`都通过`values`处理，在这里我们对`...values`应用了`rest`参数，目的是便于评估模板中每个表达式的结果，我们使用了具有函数返回值的箭头函数，这使得表达非常的简洁：
+我们还是用代码来说明这个概念，下述代码中，我们先定义一个名为`tag`函数：
 
 ```js
 function tag(parts, ...values) {
@@ -1077,7 +1058,7 @@ function tag(parts, ...values) {
 }
 ```
 
-你可以像下面这样使用标记模板，不过你会发现结果和不使用标记模板是一样的，这是因为这里我们并没有做额外的处理。
+然后我们调用使用使用标记模板，不过此时的结果和不使用标记模板是一样的，这是因为我们定义的`tag`函数实际上并未对字符串进行额外的处理。
 
 ```js
 var name = 'Maurice'
@@ -1087,7 +1068,7 @@ console.log(text)
 // <- 'Hello Maurice, I am thrilled to meet you!'
 ```
 
-标记模板还有很多别的用途，其中之一是转换用户输入值为大写，下面这个标记可以做这件事。我们先定义一个标记函数：
+我们看一个进行额外处理的例子，比如转换所有用户输入的值为大写（假设用户只会输入英语），这里我们定义标记函数`upper`来做这件事：
 
 ```js
 function upper(parts, ...values) {
@@ -1101,7 +1082,7 @@ upper`Hello, ${ name }. I am ${ emotion } to meet you!`
 // <- 'Hello MAURICE, I am THRILLED to meet you!'
 ```
 
-一个更加有用的使用是通过标记模板对对模板中的表达式进行过滤处理，现在有这么一个场景，所有的输入都来自于用户，我们可以通过使用假想的`sanitize`库来去除用户输入中的html等危险标签，这可以有效的防止XSS攻击。
+既然可以转换输入为大写，那我们再进一步想想，如果提供合适的标记模板函数，使用标记模板，我们还可以对模板中的表达式进行各种过滤处理，比如有这么一个场景，假设表达式的值都来自用户输入，假设有一个名为`sanitize`的库可用于去除用户输入中的html标签，那通过使用标记模板，就可以有效的防止XSS攻击了，使用方法如下。
 
 ```js
 function sanitized(parts, ...values) {
@@ -1116,13 +1097,14 @@ console.log(html)
 // <- '<div>Evil comment</div>'
 ```
 
-上面代码中的`iframe`差点就让破坏我们的网站了。ES6中的另外一个大的改变是提供了`let`和`const`声明。下面我们一起来学习。
+ES6中的另外一个大的改变是提供了新的变量声明方式：`let`和`const`声明，下面我们一起来学习。
+
 
 ## `let` & `const` 声明
 
-`let`语法是ES6中广为人知的特性之一了。它用起来像`var`但是，却有不同的作用域规则。
+可能很早之前你就听说过 `let` 了，它用起来像 `var` 但是，却有不同的作用域规则。
 
-涉及到作用域，JavaScript有一套复杂的规则，第一次接触的人常常会因想弄明白变量如何工作而崩溃。最终，你发现了变量提升，JS语句才开始变得有意义。变量提升意味着变量从任何被声明的地方提升到当前作用域的顶部被声明。比如，看下面的这个例子：
+JavaScript的作用域有一套复杂的规则，变量提升的存在常常让新手忐忑不安。变量提升，意味着无论你在那里声明的变量，在浏览器解析时，实际上都被提升到了当前作用域的顶部被声明。看下面的这个例子：
 
 ```js
 function isItTwo(value) {
@@ -1137,7 +1119,7 @@ isItTwo('two')
 // <- undefined
 ```
 
-上述的JS代码是可以工作的，尽管`two`是在代码分支中被声明，之后被外部分支引用。造成这种现象的原因是因为`var`被绑定到了函数或者全局的作用域。上述代码，由于声明提升，被解析后其实和下面代码的效果是一样的
+尽管`two`是在代码分支中被声明，之后被外部分支引用，上述的JS代码还是可以工作的。`var` 声明的变量`two`实际是在`isItTwo`顶部被声明的。由于声明提升的存在，上述代码其实和下面代码的效果是一样的
 
 ```js
 function isItTwo(value) {
@@ -1149,11 +1131,11 @@ function isItTwo(value) {
 }
 ```
 
-无论我们时候喜欢，变量提升比块作用域变量更加具有迷惑性。块作用域在花括号范围内生效，而不是函数范围内。
+带来了灵活性的同事，变量提升也带来了更大的迷惑性，还好ES6 为我们提供了块作用域。
 
 ### 块作用域和`let` 声明
 
-不同于函数作用域，如果我们想要更深的作用域，块作用域允许你通过`if`,`for`,`while`声明创建新作用域，你甚至还可以任意创建`{}`块.你可能也知道，JavaScript允许我们创建任意数量的块：
+相比函数作用域，块作用域允许我们通过`if`,`for`,`while`声明创建新作用域，甚至任意创建`{}`块也能创建新的作用域：
 
 ```js
 {{{{{ var deep = 'This is available from outer scope.'; }}}}}
@@ -1161,14 +1143,12 @@ console.log(deep)
 // <- 'This is available from outer scope.'
 ```
 
-使用`var`，由于变量提升的存在，我们依旧可以读取到深层中的`deep`变量，并不会报错。但是在满足以下情况下，我们可能希望这里会报错：
+由于这里使用的是`var`，考虑到变量提升的存在，我们在外部依旧可以读取到深层中的`deep`变量，这里并不会报错。不过在以下情况下，我们可能希望这里会报错：
 
-- 访问内部变量打破了我们代码中的某种封装原则
-- 内部变量根本不属于外部范围。
-- 该块有很多兄弟变量，使用相同的名称
+- 访问内部变量会打破我们代码中的某种封装原则；
 - 父块中已有有一个一个同名变量，但是内部也需要用同名变量；
 
-`let`声明，在这时候就可以用以替代`var`了，`let`遵循块作用域规则而不是函数作用域规则，在函数作用域中，想要创建深层作用域的唯一办法就是再新建一个函数了。但是通过`let`，你只需添加另外一对`{}`，这意味着你无须为了新建一层作用域而新建函数。
+使用`let`就可以解决这个问题，`let` 创建的变量在块作用域内有效，在ES6提出`let`以前，想要创建深层作用域的唯一办法就是再新建一个函数。使用`let`，你只需添加另外一对`{}`：
 
 ```js
 let topmost = {}
@@ -1183,7 +1163,7 @@ let topmost = {}
 // attempts to access innermost here would throw
 ```
 
-在`for`循环中使用`let`是一个很好的实践，这样定义的变量只会在当前作用域内生效。
+在`for`循环中使用`let`是一个很好的实践，这样定义的变量只会在当前块作用域内生效。
 
 ```js
 for (let i = 0; i < 2; i++) {
@@ -1195,9 +1175,9 @@ console.log(i)
 // <- i is not defined
 ```
 
-考虑到`let`声明的变量在每一次循环的过程中都会声明，这在处理异步函数时就很有效了，不会发生使用`var`时的那些诡异的事情，我们看一个具体的例子。
+考虑到`let`声明的变量在每一次循环的过程中都重复声明，这在处理异步函数时就很有效，不会发生使用`var`时产生的诡异的结果，我们看一个具体的例子。
 
-首先，我们看看一个典型的`var`作用域是怎么工作的，`i`被绑定在`printNumber`函数中，当每个回调函数被调用时，它的值会一直升到10，但是当每个回调函数运行时（每100us）,i的值已经是10了，因此每次打印的结果都是10.
+我们先看看 `var` 声明的变量是怎么工作的，下述代码中 `i`变量 被绑定在 `printNumber` 函数作用域中，当每个回调函数被调用时，它的值会逐步升到10，但是当每个回调函数运行时（每100us）,此时的`i`的值已经是10了，因此每次打印的结果都是10.
 
 ```js
 function printNumbers() {
@@ -1210,7 +1190,7 @@ function printNumbers() {
 printNumbers()
 ```
 
-使用`let`,则会把`i`绑定到每一个作用域中。虽然每一步,`i`的值还是在增加，但是每次循环其实都是创建了一个新的`i`，他们不会相互影响，因此打印出的就是预想的0到9了。
+使用`let`,则会把`i`绑定到每一个块作用域中。每一次循环 `i` 的值还是在增加，但是每次其实都是创建了一个新的 `i` ，不同的 `i` 之间不会相互影响 ，因此打印出的就是预想的0到9了。
 
 ```js
 function printNumbers() {
@@ -1223,11 +1203,11 @@ function printNumbers() {
 printNumbers()
 ```
 
-关于`let`还需要考虑的是另外一个名为`Temporal Dead Zone`的概念
+为了细致的讲述`let`的工作原理， 我们还需要弄懂一个名为 `Temporal Dead Zone` 的概念。
 
 ### Temporal Dead Zone
 
-简言之，如果你的代码类似下面这样，就会报错。当执行到了一个作用域，在`let`声明之前调用了`let`声明的变量。这就是Temporal Dead Zone（TDZ）。
+简言之，如果你的代码类似下面这样，就会报错。即在某个作用域中，在`let`声明之前调用了`let`声明的变量，导致的问题就是由于，Temporal Dead Zone（TDZ）的存在。
 
 ```js
 {
@@ -1237,7 +1217,7 @@ printNumbers()
 }
 ```
 
-如果定义的是一个函数，函数中引用了`name`变量则是可以的。只要该函数的执行在定义之后就可以。如果函数执行时发生在`let`声明之前，同样会导致TDZ。
+如果定义的是一个函数，函数中引用了`name`变量则是可以的，但是这个函数并未在声明前执行则不会报错。如果`let`声明之前就调用了该函数，同样会导致TDZ。
 
 ```js
 // 不会报错
@@ -1260,8 +1240,7 @@ console.log(readName())
 let name = 'Stephen Hawking'
 ```
 
-
-考虑到这些例子并未改变`name`值，下面的代码也会报错，原因也是由于它试图在声明前访问一个被`let`定义的变量
+即使像下面这样`let`定义的变量没有被赋值，下面的代码也会报错，原因依旧是它试图在声明前访问一个被`let`定义的变量
 
 ```js
 function readName() {
@@ -1283,16 +1262,14 @@ console.log(readName())
 // <- undefined
 ```
 
-只有在声明之后调用函数就不会有问题。
-
-TDZ的存在使得错误更容易发生，这在ES6之前的代码中由于编码提升和不好的编码习惯是常见的问题。在ES6中则可以比较好的避免了，要记住`let`同样存在声明提升。这意味着，变量会在我们进入块作用域时就会创建，TDZ也是在这时候创建的，只是在代码之前到真正的`let`声明所在位置时，变量是不可访问的。这时候TDZ才会消失，并允许访问变量。
+TDZ的存在使得程序更容易报错，由于声明提升和不好的编码习惯常常会存在这样的问题。在ES6中则可以比较好的避免了这种问题了，需要注意的是`let`声明的变量同样存在声明提升。这意味着，**变量会在我们进入块作用域时就会创建，TDZ也是在这时候创建的**，它保证该变量不许被访问，只有在代码运行到`let`声明所在位置时，这时候TDZ才会消失，访问限制才会取消，变量才可以被访问。
 
 
 ### Const 声明
 
-`const`声明也具有类似`let`的块作用域，它同样具有`TDZ`机制。实际上，就是因为有了`Const`才有了TDZ机制，稍后TDZ才被应用到`let`声明中。`const`需要TDZ的原因是为了防止由于变量提升，在到达`const`语句之前就对对应变量赋值，这样就出错了。TDZ机制就是针对这种场景提出的一种解决方案，使得变量之后在`const`语句之后才可用。受益于`TDZ`,其它特性的实现也变得相对容易。
+`const`声明也具有类似`let`的块作用域，它同样具有`TDZ`机制。实际上，TDZ机制是因为`const`才被创建，随后才被应用到`let`声明中。`const`需要TDZ的原因是为了防止由于变量提升，在程序解析到`const`语句之前，对`const`声明的变量进行了赋值操作，这样是有问题的。
 
-下面的代码表明，`const`具有和`let`一致的作用域
+下面的代码表明，`const`具有和`let`一致的块作用域：
 
 ```js
 const pi = 3.1415
@@ -1305,14 +1282,14 @@ console.log(pi)
 // <- 3.1415
 ```
 
-下面我们说说`const`和`let`的主要区别，首先`const`声明的变量在声明时必须赋值,否则会报错：
+下面我们说说`const`和`let`的主要区别，**首先`const`声明的变量在声明时必须赋值**,否则会报错：
 
 ```js
 const pi = 3.1415
 const e // SyntaxError, missing initializer
 ```
 
-除了必须初始化，被`const`声明的变量不能再被赋予别的值。一旦被声明，它的值就不可变了，在严格模式下，试图改变`const`声明的变量会直接报错，在非严格模式下，改变被静默被忽略。
+除了必须初始化，被`const`声明的变量不能再被赋予别的值。在严格模式下，试图改变`const`声明的变量会直接报错，在非严格模式下，改变被静默被忽略。
 
 ```js
 const people = ['Tesla', 'Musk']
@@ -1321,14 +1298,14 @@ console.log(people)
 // <- ['Tesla', 'Musk']
 ```
 
-请注意，创建了一个`const`变量并非意味着所分配的值是不可变的。这常常被大众所误解，所以非常推荐你阅读下面这段声明。
+请注意，`const`声明的变量并非意味着，其对应的值是不可变的。真正不能变的是对该值的引用，下面我们具体说明这一点。
 
 
-#### 通过const声明的变量并非不可改变
+#### 通过const声明的变量值并非不可改变
 
-使用`const`只是意味着，变量将始终指向相同的对象或初始的值。这种引用是不可变的。但是值并不不可变。
+使用`const`只是意味着，变量将始终指向相同的对象或初始的值。这种引用是不可变的。但是值并非不可变。
 
-下面的例子说明，虽然`people`的指向不可变，但是数组本身是可以被修改的。如果数组本身不可修改，下面的情况就不会发生了
+下面的例子说明，虽然`people`的指向不可变，但是数组本身是可以被修改的。
 
 ```js
 const people = ['Tesla', 'Musk']
@@ -1337,7 +1314,7 @@ console.log(people)
 // <- ['Tesla', 'Musk', 'Berners-Lee']
 ```
 
-`const`只是组织了变量引用另外一个值，另一个解释这一点的是下面这个例子，尽管我们使用`const`声明了`people`,然后把它赋值给了`humans`,我们还是可以改变`humans`的指向，因为`humans`不是有`const`声明的。`people`是有`const`声明的，则不可改变。
+`const`只是阻止变量引用另外一个值，下例中，尽管我们使用`const`声明了`people`,然后把它赋值给了`humans`,我们还是可以改变`humans`的指向，因为`humans`不是由`const`声明的，其引用可随意改变。`people` 是由 `const` 声明的，则不可改变。
 
 ```js
 const people = ['Tesla', 'Musk']
@@ -1347,7 +1324,7 @@ console.log(humans)
 // <- 'evil'
 ```
 
-如果我们的目的是让值不可修改，我们需要借助函数的帮助，比如`Object.freeze`。使用了`Object.freeze`之后的对象就不能再修改了
+如果我们的目的是让值不可修改，我们需要借助函数的帮助，比如使用`Object.freeze`：
 
 ```js
 const frozen = Object.freeze(
@@ -1362,9 +1339,9 @@ frozen.push('Water')
 
 ### `const`和`let`的优点
 
-新功能并不应该因为是新功能而被使用，ES6语法被使用的前提是它可以显著的提升我们代码的可读写和可维护性。`let`声明在大多数情况下，可以替换`var`以避免预期之外的问题。使用`let`你可以把声明放在块的顶部而不需要放在函数的顶部了，这防止了代码提示带来的潜在问题。
+新功能并不应该因为是新功能而被使用，ES6语法被使用的前提是它可以显著的提升我们代码的可读写和可维护性。`let`声明在大多数情况下，可以替换`var`以避免预期之外的问题。使用`let`你可以把声明在块的顶部进行而非函数的顶部进行。
 
-使用`const`声明是一种防止问题的很好的方法。下述代码在`checklist`函数外给`items`变量传递引用时就非常容易出错，它返回的`todo` API又和`items`有了交互。当`items`变量被改为指向另外一个列表时，我们的代码就出问题了。`todo` API 用的还是`items`之前的值，`items`本身的指代则已经改变。
+有时，我们希望有些变量的引用不可变，这时候使用`const`就能防止很多问题的发生。下述代码中 在`checklist`函数外给`items`变量传递引用时就非常容易出错，它返回的`todo` API和`items`有了交互。当`items`变量被改为指向另外一个列表时，我们的代码就出问题了。`todo` API 用的还是`items`之前的值，`items`本身的指代则已经改变。
 
 ```js
 var items = ['a', 'b', 'c']
@@ -1383,23 +1360,15 @@ function checklist(items) {
 }
 ```
 
-这类问题很难debug，找到问题可能会花费你很长一段时间。`const`在运行时报错使得你可以避免这种问题，有助于你定位问题所在。
+这类问题很难debug，找到问题原因就会花费你很长一段时间。使用`const`运行时就会报错，可以帮助你可以避免这种问题。
 
-使用`const`声明的另一个好处是可以快速识别为分配值的变量，`const`暗示这个变量是只读的，当我们读代码时，就少了一件该担心的事情。
+如果我们默认只使用`cosnt`和`let`声明变量，所有的变量都会有一样的作用域规则，这让代码更易理解，由于`const`造成的影响最小，它还曾被提议作为默认的变量声明。
 
-如果我们默认只使用`cosnt`和`let`声明变量，所有的变量都会有一样的作用域规则，这让代码更易理解，`const`有时候被提议作为默认变量声明的形式是因为其影响最小。`const`不允许重新分配值，使用块作用域，存在TDZ（未声明前不可使用）。`let`则允许重新分配值，其它方面和`const`类似，所以很自然的，如果我们想要使用可改变值的变量，我们应该使用`let`.
+总的来说，`const`不允许重新指定值，使用的是块作用域，存在TDZ。`let`则允许重新指定值，其它方面和`const`类似，而`var`声明使用函数作用域，可以重新指定值，可以在未声明前调用，考虑到这些，推荐尽量不要使用`var`声明了。
 
-另一方面，`var`声明就不那么好用了，因为它使用函数作用域，可以重新分配至，可以在未声明前调用，因此`var`声明是次于`const`和`let`的，因此在现代JavaScript中相比`let`和`const`是不那么推荐使用的。
-
-本书后续内容中，我们会默认使用`const`，当需要再分配值时，我们会使用`let`,关于为何这样做，你可以阅读[ Practical Considerations]()这一节。
 
 ### 参考
 
-1. Like polyfills, ponyfills are user-land implementations of features that aren’t available in every JavaScript runtime. While polyfills try to patch the runtime environment so that it behaves as if the feature was indeed available on the runtime, ponyfills implement the missing functionality as standalone modules that don’t pollute the runtime environment. This has the benefit of not breaking expectations third-party libraries (that don’t know about your polyfill) may have about the environment.
-
-2. Labels are used as a way of identifying instructions. Labels can be used by goto statements, to indicate what instruction we should jump to; break statements, to indicate the sequence we want to break out of; and continue statements, to indicate the sequence we want to advance.
-
-3. When using multiline template literals, spacing isn’t preserved automatically. However, in many cases we can provide just enough indentation to make it work. Be wary of indented code blocks that may result in undesired indentation due to our code block being nested.
 
 
 
